# easyforms

./: README.md  pyproject.toml
easyforms/: __init__.py  easyforms.py  server.py
example/: demo.py
example/py/: demo.py
lang/py/: easyforms.py
