[tool.poetry]
name = "easyforms"
version = "0.1.0"
description = "Create simple web form user interfaces in minutes"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
websockets = "^8.1"
bottle = "^0.12.18"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pylint = "^2.6.0"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
